# epass_usb_responder

./: CMakeLists.txt  PROTOCOL.md  README.md
pyhost/: client.py  protocol.py  pyproject.toml
pyhost/src/pyhost/: __init__.py  client.py  protocol.py
scripts/: usb_responder_gadget.sh
src/: crc32.c  crc32.h  file_ops.c  file_ops.h  functionfs_descriptors.c  functionfs_descriptors.h  io_utils.c  io_utils.h  main.c  protocol.c  protocol.h  responder.c  responder.h  shell_exec.c  shell_exec.h
